# armlab

./: test.py  test2.py  test3.py
Grounded-SAM-2/: resnet_minc_trainer.py  sam_resnet50.py
ME314_student/: README.md
ME314_student/me314_msgs/: CMakeLists.txt  package.xml
ME314_student/me314_msgs/msg/: CommandQueue.msg  CommandWrapper.msg  GripperCommand.msg  JointCommand.msg  PoseCommand.msg
ME314_student/me314_pkg/: CMakeLists.txt  package.xml  setup.py
ME314_student/me314_pkg/gazebo_models/: green_square.sdf  red_block.sdf
ME314_student/me314_pkg/launch/: me314_xarm_gazebo.launch.py  me314_xarm_real.launch.py
ME314_student/me314_pkg/me314_py/: constants.py
ME314_student/me314_pkg/me314_py/drivers/: input2action.py  install_spacemouse.py  spacemouse.py
ME314_student/me314_pkg/me314_py/robot/: robot_abc.py  xarm_robot.py
ME314_student/me314_pkg/me314_py/teleoperation/: spacemouse.py  xarm_spacemouse_ros2.py
ME314_student/me314_pkg/me314_py/utils/: robot_utils.py  rotation_utils.py  standalone_realsense_pub.py
ME314_student/me314_pkg/me314_py/xarm_api_scripts/: move_A_to_B.py
ME314_student/me314_pkg/me314_py/xarm_planner/: ball_tracker.py  ft_monitor.py  ft_sensing.py  full_pipeline.py  pickplace.py  xarm_a2b_example.py  xarm_commander.py
ME314_student/me314_pkg/me314_xarm_ros2_docker/: Dockerfile  entrypoint.sh
armlab/: gemini_material_properties.py  hsv_extractor.py  temp_display.py  transient_model_temp.py
armlab/Grounded-SAM-2/: grounded_sam2_local_demo.py  resnet_minc_trainer.py  sam_dinov2.py  sam_hsv.py  sam_resnet50.py
armlab/Grounded-SAM-2/grounding_dino/: setup.py
armlab/Grounded-SAM-2/sam2/: build_sam.py
armlab/PyTorch-Encoding/torch_encoding.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
armlab/datasets/wooden/: wooden_20balls_20category__13258.original_category.avif
dinov2/notebooks/: semantic_segmentation.ipynb
