<?xml version="1.0"?>
<package format="3">
  <name>me314_msgs</name>
  <version>0.0.1</version>
  <description>Custom messages for ME314</description>
  <maintainer email="aqiu34@stanford.edu">Alex Qiu</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
